Project Was submitted like this

--- a/src/main/resources/com/project/controller/Login.fxml
+++ b/src/main/resources/com/project/controller/Login.fxml
@@ -4,6 +4,7 @@
 <?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -34,7 +35,7 @@
                   <Image url="@Assests/LOGIN.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="Choose_User" fitHeight="145.5" fitWidth="112.5" layoutX="119.0" layoutY="261.0" onMouseClicked="#User" styleClass="users">
+            <ImageView fx:id="Choose_User" fitHeight="145.5" fitWidth="112.5" layoutX="191.0" layoutY="260.0" onMouseClicked="#User" styleClass="users">
                <image>
                   <Image url="@Assests/USER.png" />
                </image>
@@ -42,7 +43,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </ImageView>
-            <ImageView fx:id="Choose_Admin" fitHeight="145.5" fitWidth="112.5" layoutX="261.5" layoutY="261.0" onMouseClicked="#Admin" styleClass="users">
+            <ImageView fx:id="Choose_Admin" fitHeight="145.5" fitWidth="112.5" layoutX="261.5" layoutY="261.0" onMouseClicked="#Admin" styleClass="users" visible="false">
                <image>
                   <Image url="@Assests/ADMIN.png" />
                </image>
@@ -60,11 +61,11 @@
                   <Image url="@Assests/Password.png" />
                </image>
             </ImageView>
-            <TextField fx:id="uname_field" blendMode="MULTIPLY" layoutX="117.0" layoutY="339.5" onAction="#Login" opacity="0.0" prefHeight="39.0" prefWidth="288.0" promptText=" email" styleClass="text-field" stylesheets="@Assests/Fx.css" visible="false">
+            <TextField fx:id="uname_field" blendMode="MULTIPLY" layoutX="117.0" layoutY="339.5" onAction="#Login" opacity="0.0" prefHeight="39.0" prefWidth="288.0" promptText=" email" styleClass="text-field" stylesheets="@Assests/Fx.css">
                <font>
                   <Font name="Montserrat Light Italic" size="10.0" />
                </font></TextField>
-            <PasswordField fx:id="password_field" layoutX="117.0" layoutY="395.0" onAction="#Login" opacity="0.0" prefHeight="39.0" prefWidth="288.0" promptText=" password" styleClass="text-field" stylesheets="@Assests/Fx.css" visible="false">
+            <PasswordField fx:id="password_field" layoutX="117.0" layoutY="395.0" onAction="#Login" opacity="0.0" prefHeight="39.0" prefWidth="288.0" promptText=" password" styleClass="text-field" stylesheets="@Assests/Fx.css">
                <font>
                   <Font name="Poppins Black" size="13.0" />
                </font>
@@ -75,6 +76,11 @@
                </font>
             </Button>
             <MFXButton fx:id="Login" defaultButton="true" layoutX="335.0" layoutY="449.0" onAction="#Login" prefHeight="32.0" prefWidth="77.0" rippleAnimateBackground="false" rippleAnimationSpeed="2.0" rippleColor="BLACK" styleClass="btn" text="Login" visible="false" />
+            <Label fx:id="err" layoutX="72.0" layoutY="314.0" prefHeight="24.0" prefWidth="225.0" style="-fx-text-fill: brown; -fx-font-size: 1.1em;" text="Wrong Password combination" visible="false">
+               <font>
+                  <Font size="7.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </left>
